--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,12 @@
+@import 'tailwindcss';
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+    name: "halloween";
+    --color-info: #5e72e4;
+    --color-neutral: #5e72e4;
+    --color-base-300: #2a2a2a;
+  }
+
 .s-combo {
     @apply flex flex-col-reverse
 }
