--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,57 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+  name: "halloween";
+  --color-info: #5e72e4;
+  --color-neutral: #5e72e4;
+  --color-base-300: #2a2a2a;
+}
+
+@plugin '@tailwindcss/typography';
+
+@theme {
+  --font-arknigths: FarNorthRunes, Segoe UI, Roboto, Arial, Noto Sans;
+  --font-san: OctinSpraypaint, Segoe UI, Roboto, Arial, Noto Sans;
+  --font-zh-cN: SmileySans, Segoe UI, Roboto, Arial, Noto Sans;
+  --font-en: Bender, Segoe UI, Roboto, Arial, Noto Sans;
+
+  --color-default: var(--default);
+  --color-system: var(--system);
+
+  --shadow-sm:
+    0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%),
+    0 1px 5px 0 rgb(0 0 0 / 12%);
+  --shadow-md:
+    0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14),
+    0 1px 8px 0 rgba(0, 0, 0, 0.12);
+  --shadow-lg:
+    0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14),
+    0 1px 18px 0 rgba(0, 0, 0, 0.12);
+  --shadow-xl:
+    0 5px 6px -3px rgba(0, 0, 0, 0.2), 0 9px 12px 1px rgba(0, 0, 0, 0.14),
+    0 3px 16px 2px rgba(0, 0, 0, 0.12);
+  --shadow-3xl:
+    0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0 9px 46px 8px rgba(0, 0, 0, 0.12);
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 .bar-text {
     @apply my-2 text-sm leading-5 text-gray-700 transition-colors duration-300 transform dark:text-gray-200 hover:text-blue-600 dark:hover:text-blue-400 hover:underline md:mx-4 md:my-0
